- Fixed storage access when storage is empty.
- Various routing bug fixes (by jsteng).
- Fix typo in code block for packet 010F: rename $ID to $skillID.
- 'talk resp' now works correctly with NPCs that present a list of selections
  without saying anything else.
- Emotions that aren't in the lookup table will be displayed by number.

Internal:
- Portal compilation is now 30% faster.

Credits:
- Fenris: Tk interface improvements.
- aputs: Inventory checking config options.
- fov: Storage access bugfix.
- brianhj: 010F packet typo fix.

Internal:
- Added AI.pm, which is a wrapper for @ai_seq and @ai_seq_args.
- Added $char, an alias for $chars[$config{'char'}].
- ai_skillUse's first parameter is skillID (eg AL_HEAL) rather then the
  internal ID Number

==================
### 1.3.1 (beta)
==================

New features:
- Easier and more flexible avoid.txt format by joseph.
  You should download the new avoid.txt from the latest confpack! The
  old format is not supported anymore.
  See also http://openkore.sourceforge.net/forum/viewtopic.php?t=1633

- Support for idRO: secureLogin_type 3
- Added north/east/south/west/northeast/southeast/southwest/northwest
  commands to manually move the bot in that direction. If you want
  abbreviations for these commands like in a MUD, put this in your config.txt:

  # short movement commands
  alias_n north
  alias_e east
  alias_w west
  alias_s south
  alias_ne northeast
  alias_se southeast
  alias_sw southwest
  alias_nw northwest

  # new names for existing commands
  alias_sc s
  alias_em e

Bug fixes:
- Possibly fixed the "utf8.pm not found" error.
- Fix monster status/ailment detection.
- Fix getAuto.
- Attacking party or followTarget's monster is never considered KS.
- Added some unstucking routines.
  The teleportAuto_noUnstuck configuration option will make bot not 
  teleport when it's stuck.
- Hopefully fix zeny display when dealing for real.
- "respawn" command now works when dead.

Minor tweaks: